--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #VS Code
 .vscode/
 settings.json
-
+venv
 # Django related 
 # src/<yourproject>/settings/local.py
 # static-cdn/  # any collected static files 
